Refactor: Respect existing train/test split in raw data processing
Modified the image processing pipeline (Section 2.4) to process images based on the existing 'Data Train' and 'Data Test' subfolders in the raw dataset. Removed the redundant 'test_split' parameter and random splitting logic, ensuring that images from the raw train folder are saved to the processed train folder, and raw test images to the processed test folder.

--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPLNkjeaaqDvnOly/hEvLKC",
+      "authorship_tag": "ABX9TyOjE06mDqKURdRCQZt6THW9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -445,38 +445,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bb27a5f4",
-        "outputId": "5f00ab6d-86e8-4b58-8a10-3bc0a16a6530"
+        "outputId": "e8091320-5735-4fdd-ec6c-b4d59acf5e9b"
       },
       "source": [
-        "def process_and_save_faces_simple_crop(source_dir, processed_train_dir, processed_test_dir, img_width, img_height, test_split=0.2):\n",
+        "def process_and_save_faces_by_split(raw_train_dir, raw_test_dir, processed_train_dir, processed_test_dir, img_width, img_height):\n",
         "    \"\"\"\n",
-        "    Processes images in source_dir (including subdirectories) by performing a simple\n",
-        "    center crop and resize, and saves them to processed_train_dir or processed_test_dir\n",
-        "    based on the test_split ratio. Assumes source_dir contains subdirectories named after classes (NIMs).\n",
-        "    This function replaces face detection for faster processing, but does not handle\n",
-        "    varied backgrounds or off-center faces effectively.\n",
+        "    Processes images from raw train and test directories by performing a simple\n",
+        "    center crop and resize, and saves them to the corresponding processed\n",
+        "    train and test directories. Assumes raw directories contain subdirectories\n",
+        "    named after classes (NIMs).\n",
         "\n",
         "    Args:\n",
-        "        source_dir (str): Directory containing class subdirectories.\n",
+        "        raw_train_dir (str): Directory containing raw training images (with class subdirectories).\n",
+        "        raw_test_dir (str): Directory containing raw testing images (with class subdirectories).\n",
         "        processed_train_dir (str): Directory to save processed training images.\n",
         "        processed_test_dir (str): Directory to save processed testing images.\n",
         "        img_width (int): Target width for cropped face images.\n",
         "        img_height (int): Target height for cropped face images.\n",
-        "        test_split (float): Ratio of data to be allocated to the test set (0.0 to 1.0).\n",
         "    \"\"\"\n",
         "\n",
         "    total_processed = 0\n",
         "    skipped_error = 0\n",
         "\n",
-        "    print(f\"\\nStarting simple center cropping from {source_dir}...\")\n",
+        "    print(f\"\\nStarting simple center cropping for training data from {raw_train_dir}...\")\n",
         "\n",
-        "    # Walk through subdirectories to find images\n",
-        "    for class_dir in os.listdir(source_dir):\n",
-        "        class_path = os.path.join(source_dir, class_dir)\n",
+        "    # Process training data\n",
+        "    for class_dir in os.listdir(raw_train_dir):\n",
+        "        class_path = os.path.join(raw_train_dir, class_dir)\n",
         "        if os.path.isdir(class_path):\n",
         "            nim = class_dir # Class name is the directory name (NIM)\n",
         "            image_files = glob.glob(os.path.join(class_path, '*.jpg'))\n",
-        "            random.shuffle(image_files) # Shuffle files within each class\n",
         "\n",
         "            for img_path in image_files:\n",
         "                try:\n",
@@ -491,7 +489,6 @@
         "                    h, w, _ = img.shape\n",
         "\n",
         "                    # Determine crop dimensions (simple center crop)\n",
-        "                    # We'll crop a square from the center\n",
         "                    min_dim = min(h, w)\n",
         "                    start_x = max(0, int((w - min_dim) / 2))\n",
         "                    start_y = max(0, int((h - min_dim) / 2))\n",
@@ -504,16 +501,9 @@
         "                    # Resize the cropped image to the target size\n",
         "                    img_resized = cv2.resize(center_crop, (img_width, img_height))\n",
         "\n",
-        "                    # Determine whether to save to train or test directory\n",
-        "                    if random.random() < test_split:\n",
-        "                        save_dir = os.path.join(processed_test_dir, nim)\n",
-        "                    else:\n",
-        "                        save_dir = os.path.join(processed_train_dir, nim)\n",
-        "\n",
-        "                    # Ensure the class directory exists (should be already created in 2.3, but good practice)\n",
+        "                    # Define save directory and path\n",
+        "                    save_dir = os.path.join(processed_train_dir, nim)\n",
         "                    os.makedirs(save_dir, exist_ok=True)\n",
-        "\n",
-        "                    # Define save path using the original filename\n",
         "                    save_path = os.path.join(save_dir, os.path.basename(img_path))\n",
         "\n",
         "                    # Save the processed image\n",
@@ -525,34 +515,105 @@
         "                    skipped_error += 1\n",
         "                    continue\n",
         "\n",
-        "    print(f\"\\nSimple center cropping complete.\")\n",
-        "    print(f\"Total images processed: {total_processed}\")\n",
-        "    print(f\"Images skipped (error): {skipped_error}\")\n",
+        "    print(f\"\\nSimple center cropping for training data complete.\")\n",
+        "    print(f\"Total training images processed: {total_processed}\")\n",
+        "    print(f\"Training images skipped (error): {skipped_error}\")\n",
+        "\n",
+        "    total_processed_test = 0\n",
+        "    skipped_error_test = 0\n",
+        "\n",
+        "    print(f\"\\nStarting simple center cropping for testing data from {raw_test_dir}...\")\n",
+        "\n",
+        "    # Process testing data\n",
+        "    for class_dir in os.listdir(raw_test_dir):\n",
+        "        class_path = os.path.join(raw_test_dir, class_dir)\n",
+        "        if os.path.isdir(class_path):\n",
+        "            nim = class_dir # Class name is the directory name (NIM)\n",
+        "            image_files = glob.glob(os.path.join(class_path, '*.jpg'))\n",
+        "\n",
+        "            for img_path in image_files:\n",
+        "                try:\n",
+        "                    # Read image\n",
+        "                    img = cv2.imread(img_path)\n",
+        "                    if img is None:\n",
+        "                        print(f\"Warning: Could not read image {img_path}. Skipping.\")\n",
+        "                        skipped_error_test += 1\n",
+        "                        continue\n",
+        "\n",
+        "                    # Get image dimensions\n",
+        "                    h, w, _ = img.shape\n",
+        "\n",
+        "                    # Determine crop dimensions (simple center crop)\n",
+        "                    min_dim = min(h, w)\n",
+        "                    start_x = max(0, int((w - min_dim) / 2))\n",
+        "                    start_y = max(0, int((h - min_dim) / 2))\n",
+        "                    end_x = start_x + min_dim\n",
+        "                    end_y = start_y + min_dim\n",
+        "\n",
+        "                    # Crop the center square\n",
+        "                    center_crop = img[start_y:end_y, start_x:end_x]\n",
+        "\n",
+        "                    # Resize the cropped image to the target size\n",
+        "                    img_resized = cv2.resize(center_crop, (img_width, img_height))\n",
+        "\n",
+        "                    # Define save directory and path\n",
+        "                    save_dir = os.path.join(processed_test_dir, nim)\n",
+        "                    os.makedirs(save_dir, exist_ok=True)\n",
+        "                    save_path = os.path.join(save_dir, os.path.basename(img_path))\n",
+        "\n",
+        "                    # Save the processed image\n",
+        "                    cv2.imwrite(save_path, img_resized)\n",
+        "                    total_processed_test += 1\n",
+        "\n",
+        "                except Exception as e:\n",
+        "                    print(f\"An error occurred while processing {img_path}: {e}\")\n",
+        "                    skipped_error_test += 1\n",
+        "                    continue\n",
+        "\n",
+        "    print(f\"\\nSimple center cropping for testing data complete.\")\n",
+        "    print(f\"Total testing images processed: {total_processed_test}\")\n",
+        "    print(f\"Testing images skipped (error): {skipped_error_test}\")\n",
         "\n",
         "\n",
         "# Run the pipeline\n",
-        "# Use the new function that performs simple cropping\n",
-        "process_and_save_faces_simple_crop(\n",
-        "    source_dir=RAW_DATA_PATH,\n",
-        "    processed_train_dir=PROCESSED_TRAIN_DIR,\n",
-        "    processed_test_dir=PROCESSED_TEST_DIR,\n",
-        "    img_width=IMG_WIDTH,\n",
-        "    img_height=IMG_HEIGHT,\n",
-        "    test_split=0.2 # 80% train, 20% test split\n",
-        ")"
+        "# Assumes RAW_DATA_PATH now points to the directory containing 'Data Train' and 'Data Test' subfolders\n",
+        "raw_train_folder = os.path.join(RAW_DATA_PATH, 'Data Train')\n",
+        "raw_test_folder = os.path.join(RAW_DATA_PATH, 'Data Test')\n",
+        "\n",
+        "\n",
+        "# Check if the expected raw subfolders exist\n",
+        "if not os.path.exists(raw_train_folder):\n",
+        "    print(f\"Error: Raw training data folder not found at {raw_train_folder}. Please check your extracted data structure.\")\n",
+        "elif not os.path.exists(raw_test_folder):\n",
+        "     print(f\"Error: Raw testing data folder not found at {raw_test_folder}. Please check your extracted data structure.\")\n",
+        "else:\n",
+        "    process_and_save_faces_by_split(\n",
+        "        raw_train_dir=raw_train_folder,\n",
+        "        raw_test_dir=raw_test_folder,\n",
+        "        processed_train_dir=PROCESSED_TRAIN_DIR,\n",
+        "        processed_test_dir=PROCESSED_TEST_DIR,\n",
+        "        img_width=IMG_WIDTH,\n",
+        "        img_height=IMG_HEIGHT\n",
+        "    )"
       ],
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Starting simple center cropping from /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0...\n",
+            "Starting simple center cropping for training data from /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0/Data Train...\n",
             "\n",
-            "Simple center cropping complete.\n",
-            "Total images processed: 2081\n",
-            "Images skipped (error): 0\n"
+            "Simple center cropping for training data complete.\n",
+            "Total training images processed: 0\n",
+            "Training images skipped (error): 0\n",
+            "\n",
+            "Starting simple center cropping for testing data from /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0/Data Test...\n",
+            "\n",
+            "Simple center cropping for testing data complete.\n",
+            "Total testing images processed: 0\n",
+            "Testing images skipped (error): 0\n"
           ]
         }
       ]
